--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ h2 {
   flex-direction: column;
   justify-content: left;
   align-items: flex-start;
-  width: 80%;
+  width: 50%;
   margin-left: 7rem;
   font-size: 2rem;
 }
@@ -162,6 +162,7 @@ h2 {
   /* display: flex;
   flex-direction: row; */
   font-family: "HIMECATOR-2", sans-serif;
+  margin-top: 1em;
   /* width: 80%; */
 }
 
@@ -216,10 +217,16 @@ h2 {
 }
 
 img {
+  border: 2px dotted rgb(44, 115, 173);
   width: 100%;
   margin-bottom: 8rem;
 }
 
+.img-menu{
+  width: 35%;
+  margin-right: 5%;
+  margin-left: auto;
+}
 .work-title {
   font-family: "cmunrm", sans-serif;
   font-size: 2rem; /* גודל הפונט*/
