--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ h2 {
   justify-content: center;
 }
 .contacts {
-  border: 2px dotted rgb(44, 115, 173);
+  /*border: 2px dotted rgb(44, 115, 173);*/
   display: flex;
   flex-direction: column;
 }
@@ -217,12 +217,13 @@ h2 {
 }
 
 img {
-  border: 2px dotted rgb(44, 115, 173);
+  /*border: 2px dotted rgb(44, 115, 173);*/
   width: 100%;
   margin-bottom: 8rem;
 }
 
 .img-menu{
+  border: 1px solid violet;
   width: 35%;
   margin-right: 5%;
   margin-left: auto;
